[package]
name = "shader"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dr. Rubisco <doc@thedocruby.dev>"]

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { version = "=0.9.0" }
# use `gravylib` instead of these when creating your own shader crate
gravylib_helpers = { path = "../../gravylib/gravylib_helpers" }

[build-dependencies]
spirv-builder = { version = "=0.9.0", features = ["watch"] }
